@@ -1,5 +1,5 @@
-import { Arr, Cell, Contracts, Optional } from '@ephox/katamari';
-import { Css, SugarElement, SugarNode } from '@ephox/sugar';
+import { Arr, Cell, Fun, Optional, Type } from '@ephox/katamari';
+import { Attribute, Css, SugarElement, SugarNode } from '@ephox/sugar';
 import { getAttrValue } from '../util/CellUtils';
 
 export interface CellSpan {
@@ -39,7 +39,8 @@ export interface GeneratorsTransform extends GeneratorsWrapper {
 }
 
 export interface GeneratorsMerging extends GeneratorsWrapper {
-  readonly combine: (cell: SugarElement) => () => SugarElement;
+  readonly unmerge: (cell: SugarElement) => () => SugarElement;
+  readonly merge: (cells: SugarElement[]) => () => SugarElement;
 }
 
 interface Recent {
@@ -51,8 +52,6 @@ interface Item {
   readonly item: SugarElement;
   readonly sub: SugarElement;
 }
-
-const verifyGenerators: (gen: Generators) => Generators = Contracts.exactly([ 'cell', 'row', 'replace', 'gap', 'col', 'colgroup' ]);
 
 const elementToData = function (element: SugarElement): CellSpan {
   const colspan = getAttrValue(element, 'colspan', 1);
@@ -66,7 +65,6 @@ const elementToData = function (element: SugarElement): CellSpan {
 
 // note that `toData` seems to be only for testing
 const modification = function (generators: Generators, toData = elementToData): GeneratorsModification {
-  verifyGenerators(generators);
   const position = Cell(Optional.none<SugarElement>());
 
   const nu = function (data: CellSpan) {
@@ -110,7 +108,6 @@ const modification = function (generators: Generators, toData = elementToData): 
 const transform = function <K extends keyof HTMLElementTagNameMap> (scope: string | null, tag: K) {
   return function (generators: Generators): GeneratorsTransform {
     const position = Cell(Optional.none<SugarElement>());
-    verifyGenerators(generators);
     const list: Item[] = [];
 
     const find = function (element: SugarElement, comparator: (a: SugarElement, b: SugarElement) => boolean) {
@@ -149,15 +146,23 @@ const transform = function <K extends keyof HTMLElementTagNameMap> (scope: strin
   };
 };
 
-const merging = function (generators: Generators) {
-  verifyGenerators(generators);
+const merging = (generators: Generators) => {
   const position = Cell(Optional.none<SugarElement>());
 
-  const combine = function (cell: SugarElement) {
+  const unmerge = (cell: SugarElement) => {
     if (position.get().isNone()) {
       position.set(Optional.some(cell));
     }
-    return function () {
+
+    const scope = Attribute.get(cell, 'scope');
+
+    if (scope === 'colgroup') {
+      Attribute.set(cell, 'scope', 'col');
+    } else if (scope === 'rowgroup') {
+      Attribute.set(cell, 'scope', 'row');
+    }
+
+    return () => {
       const raw = generators.cell({
         element: cell,
         colspan: 1,
@@ -166,12 +171,52 @@ const merging = function (generators: Generators) {
       // Remove any width calculations because they are no longer relevant.
       Css.remove(raw, 'width');
       Css.remove(cell, 'width');
+
+      const scope = Attribute.get(cell, 'scope');
+
+      if (Type.isString(scope)) {
+        Attribute.set(raw, 'scope', scope);
+      }
+
       return raw;
     };
   };
 
+  const merge = (cells: SugarElement[]) => {
+    const getScopeProperty = () => {
+      const baseScope = Attribute.get(cells[0], 'scope');
+      const scopes = [ 'row', 'col' ];
+
+      const isMixed = Arr.exists(cells.slice(1), (c) => {
+        const scopeOpt = Attribute.getOpt(c, 'scope');
+
+        return scopeOpt.fold(
+          Fun.never,
+          (scope) => Arr.contains(scopes, scope) && scope !== baseScope
+        );
+      });
+
+      return isMixed ? 'col' : baseScope;
+    };
+
+    Css.remove(cells[0], 'width');
+
+    const scope = getScopeProperty();
+
+    if (scope === 'col') {
+      Attribute.set(cells[0], 'scope', 'colgroup');
+    } else if (scope === 'row') {
+      Attribute.set(cells[0], 'scope', 'rowgroup');
+    }
+
+    return () => {
+      return cells[0];
+    };
+  };
+
   return {
-    combine,
+    unmerge,
+    merge,
     cursor: position.get
   };
 };
