@@ -109,4 +109,109 @@ UnitTest.test('UnmergeOperationsTest', function () {
       { section: 1, row: 0, column: 0 }
     ]
   );
+
+  Assertions.checkUnmerge(
+    '<table>' +
+      '<tbody>' +
+        '<tr>' +
+          '<th scope="row">A1</th>' +
+          '<td>B1</td>' +
+          '<td>C1</td>' +
+          '<td>D1</td>' +
+        '</tr>' +
+        '<tr>' +
+          '<th scope="row">?</th>' +
+          '<td>B2</td>' +
+          '<td>C2</td>' +
+          '<td>D2</td>' +
+        '</tr>' +
+        '<tr>' +
+          '<th scope="row">?</th>' +
+          '<td>B3</td>' +
+          '<td>C3</td>' +
+          '<td>D3</td>' +
+        '</tr>' +
+      '</tbody>' +
+    '</table>',
+
+    '<table>' +
+      '<tbody>' +
+        '<tr>' +
+          '<th rowspan="3" scope="rowgroup">A1</th>' +
+          '<td>B1</td>' +
+          '<td>C1</td>' +
+          '<td>D1</td>' +
+        '</tr>' +
+        '<tr>' +
+          '<td>B2</td>' +
+          '<td>C2</td>' +
+          '<td>D2</td>' +
+        '</tr>' +
+        '<tr>' +
+          '<td>B3</td>' +
+          '<td>C3</td>' +
+          '<td>D3</td>' +
+        '</tr>' +
+      '</tbody>' +
+    '</table>',
+    [
+      {
+        section: 0,
+        row: 0,
+        column: 0
+      }
+    ]
+  );
+
+  Assertions.checkUnmerge(
+    '<table>' +
+      '<tbody>' +
+        '<tr>' +
+          '<th scope="col">A1</th>' +
+          '<th scope="col">?</th>' +
+          '<th scope="col">?</th>' +
+          '<th scope="col">?</th>' +
+        '</tr>' +
+        '<tr>' +
+          '<td>A2</td>' +
+          '<td>B2</td>' +
+          '<td>C2</td>' +
+          '<td>D2</td>' +
+        '</tr>' +
+        '<tr>' +
+          '<td>A3</td>' +
+          '<td>B3</td>' +
+          '<td>C3</td>' +
+          '<td>D3</td>' +
+        '</tr>' +
+      '</tbody>' +
+    '</table>',
+
+    '<table>' +
+      '<tbody>' +
+        '<tr>' +
+          '<th colspan="4" scope="colgroup">A1</th>' +
+        '</tr>' +
+        '<tr>' +
+          '<td>A2</td>' +
+          '<td>B2</td>' +
+          '<td>C2</td>' +
+          '<td>D2</td>' +
+        '</tr>' +
+        '<tr>' +
+          '<td>A3</td>' +
+          '<td>B3</td>' +
+          '<td>C3</td>' +
+          '<td>D3</td>' +
+        '</tr>' +
+      '</tbody>' +
+    '</table>',
+    [
+      {
+        section: 0,
+        row: 0,
+        column: 0
+      }
+    ]
+  );
 });
